--- a/portfolios/gtc_logo.html
+++ b/portfolios/gtc_logo.html
@@ -126,6 +126,7 @@
                 <li><b>Growth</b> - We want our logo to communicate a sense of upward momentum and growth.</li>
                 <div class="h-10"></div>
                 <li><b>Green</b> We want to form an identity and visual style around a single color. We chose the color green becuase it often represents wealth, growth, and vitality.</li>
+                <div class="h-10"></div>
                 <li><b>Tree</b> - Our company is called Good Tree Capital. <em>Tree.</em> We want to reference this in the logo.</li>
             </ul>
         </div>
