--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                     
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6 visual">
-                        <a href="single-project.html" class="portfolio_item">
+                        <a href="portfolios/jhilmilaa.html" class="portfolio_item">
                             <img src="img/portfolio/jhilmilaa_preview.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
-                                        <span>Jhilmilaa</span>
+                                        <span>Jhilmilaa: Vibrance of Our Nation</span>
                                         <em>Visual Design</em>
                                     </div>
                                 </div>
@@ -315,7 +315,7 @@
                 <div class="h-10"></div>
                 <h4>Prototyping</h4>
                 <div class="h-10"></div>
-                <p>Using software such as Flinto, Invision Studio, and Keynote, I build prototypes that showcase the nuances of every interaction.</p>
+                <p>Using software such as Protopie, Invision Studio, and Keynote, I build prototypes that showcase the nuances of every interaction.</p>
             </div>
            
             <div class="col-md-4  service-box">
