Update gtc_logo alt

--- a/portfolios/gtc_logo.html
+++ b/portfolios/gtc_logo.html
@@ -175,7 +175,7 @@
         </div>
         
         <div class="col-md-9">
-            <a href="../img/portfolio/GTC_logo/final_designs.png" data-lightbox="GTC_web" data-title="The logo in action"><img src="../img/portfolio/GTC_logo/final_designs.png" alt="" class="img-responsive" /></a>
+            <a href="../img/portfolio/GTC_logo/final_designs.png" data-lightbox="GTC_logo" data-title="The logo in action"><img src="../img/portfolio/GTC_logo/final_designs.png" alt="" class="img-responsive" /></a>
             <div class="h-30"></div>
         </div>
     </div>
