--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <link href="fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
+    
+    <!--preview-->
+    <meta property="og:title" content="Nishal Nandigam Design">
+    <meta property="og:image" content="img/preview.png">
+    <meta property="og:description" content="I currently work at Amazon, where I spend my day championing our customers, ideating new solutions, and crafting vivid experiences.">
+    <meta property="og:url" content="https://nnandigam23.github.io/">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
