--- a/portfolios/elev8_preorder_experience.html
+++ b/portfolios/elev8_preorder_experience.html
@@ -23,6 +23,13 @@
     <link href="feather/feather.css" rel="stylesheet" type="text/css">
     <!-- modernizr -->
     <script src="../js/modernizr.js"></script>
+    
+    <!--preview-->
+    <meta property="og:title" content="Elev8 Preorder Experience">
+    <meta property="og:image" content="../img/portfolio/elev8/intro.png">
+    <meta property="og:description" content="Nishal Nandigam's portfolio">
+    <meta property="og:url" content="https://nnandigam23.github.io/elev8_preorder_experience.html">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
