--- a/portfolios/d2_help_gateway.html
+++ b/portfolios/d2_help_gateway.html
@@ -23,6 +23,13 @@
     <link href="feather/feather.css" rel="stylesheet" type="text/css">
     <!-- modernizr -->
     <script src="../js/modernizr.js"></script>
+    
+    <!--preview-->
+    <meta property="og:title" content="Device & Digital Help Gateway">
+    <meta property="og:image" content="../img/portfolio/D2Gateway/intro.png">
+    <meta property="og:description" content="Nishal Nandigam's portfolio">
+    <meta property="og:url" content="https://nnandigam23.github.io/d2_help_gateway.html">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
