--- a/portfolios/desktop-customer-service-chat.html
+++ b/portfolios/desktop-customer-service-chat.html
@@ -23,6 +23,13 @@
 
     <!-- modernizr -->
     <script src="../js/modernizr.js"></script>
+    
+    <!--preview-->
+    <meta property="og:title" content="Desktop Customer Service Chat">
+    <meta property="og:image" content="../img/portfolio/MUD/intro.png">
+    <meta property="og:description" content="Nishal Nandigam's portfolio">
+    <meta property="og:url" content="https://nnandigam23.github.io/desktop-customer-service-chat.html">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
