--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,13 @@
 
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
+    
+    <!--preview-->
+    <meta property="og:title" content="Resume - Nishal Nandigam">
+    <meta property="og:image" content="img/preview.png">
+    <meta property="og:description" content="Nishal Nandigam's portfolio">
+    <meta property="og:url" content="https://nnandigam23.github.io/resume.html">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
