--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="email" required>
+                            <input type="email" name="email" required>
                             <span>your email</span>
                         </div>
                     </div>
