--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6 feat web">
-                        <a href="portfolios/GTC_web.html" class="portfolio_item">
+                        <a href="portfolios/GTC_web_experience.html" class="portfolio_item">
                             <img src="img/portfolio/GTC/preview.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
