Index.html -> nishal.design

--- a/portfolios/elev8_preorder_experience.html
+++ b/portfolios/elev8_preorder_experience.html
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Elev8 Preorder Experience">
     <meta property="og:image" content="../img/portfolio/elev8/intro.png">
     <meta property="og:description" content="Nishal Nandigam's portfolio">
-    <meta property="og:url" content="https://nnandigam23.github.io/elev8_preorder_experience.html">
+    <meta property="og:url" content="https://nishal.design/elev8_preorder_experience.html">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -56,7 +56,7 @@
        <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="../index.html"><img src="../img/logo.png" width="80" alt="Logo"></a>
+                <a href="https://nishal.design/"><img src="../img/logo.png" width="80" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -69,7 +69,7 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="https://nishal.design/">Home</a></li>
                 <li><a href="../portfolio.html">Portfolio</a></li>
                 <li><a href="../resume.html">Resume</a></li>
                 <li><a href="../contact.html">Contact </a></li>
