--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Resume - Nishal Nandigam">
     <meta property="og:image" content="img/preview.png">
     <meta property="og:description" content="Nishal Nandigam's portfolio">
-    <meta property="og:url" content="https://nnandigam23.github.io/resume.html">
+    <meta property="og:url" content="https://nishal.design/resume.html">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -55,7 +55,7 @@
        <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
+                <a href="https://nishal.design/"><img src="img/logo.png" width="80" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -67,7 +67,7 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="https://nishal.design/">Home</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="resume.html">Resume</a><i class="ion-ios-circle-filled color size-15"></i></li>
                 <li><a href="contact.html">Contact</a></li>
