--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Nishal Nandigam Design">
     <meta property="og:image" content="img/preview.png">
     <meta property="og:description" content="I currently work at Amazon, where I spend my day championing our customers, ideating new solutions, and crafting vivid experiences.">
-    <meta property="og:url" content="https://nnandigam23.github.io/">
+    <meta property="og:url" content="https://nishal.design/">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -56,7 +56,7 @@
         <!-- box header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
+                <a href="https://nishal.design/"><img src="img/logo.png" width="80" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -69,7 +69,7 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li><a href="index.html">Home</a><i class="ion-ios-circle-filled color size-15"></i></li>
+                <li><a href="https://nishal.design/">Home</a><i class="ion-ios-circle-filled color size-15"></i></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="contact.html">Contact </a></li>
