--- a/portfolios/message_us_v2.html
+++ b/portfolios/message_us_v2.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Device & Digital Help Gateway">
     <meta property="og:image" content="../img/portfolio/D2Gateway/intro.png">
     <meta property="og:description" content="Nishal Nandigam's portfolio">
-    <meta property="og:url" content="https://nnandigam23.github.io/d2_help_gateway.html">
+    <meta property="og:url" content="https://nishal.design/d2_help_gateway.html">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -59,7 +59,7 @@
        <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="../index.html"><img src="../img/logo.png" width="80" alt="Logo"></a>
+                <a href="https://nishal.design/"><img src="../img/logo.png" width="80" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -72,7 +72,7 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="https://nishal.design/">Home</a></li>
                 <li><a href="../portfolio.html">Portfolio</a></li>
                 <li><a href="../resume.html">Resume</a></li>
                 <li><a href="../contact.html">Contact </a></li>
@@ -98,6 +98,11 @@
                 </div>
                 <div class="col-xs-6">
                     <button type="submit" onclick="passWord()" id="submitPSWD" class="btn btn-box">Submit</button>
+                </div>
+                
+                <div class="col-xs-6">
+                    <div class="h-30"></div>
+                    <span class="pull-right"><p><a href="../contact.html">Contact me</a></p></span>
                 </div>
             </div>
         </div>
