--- a/portfolios/pls-redesign.html
+++ b/portfolios/pls-redesign.html
@@ -28,7 +28,7 @@
     <meta property="og:title" content="PLS Mobile Redesign">
     <meta property="og:image" content="../img/portfolio/PLS/intro.png">
     <meta property="og:description" content="Nishal Nandigam's portfolio">
-    <meta property="og:url" content="https://nnandigam23.github.io/pls-redesign.html">
+    <meta property="og:url" content="https://nishal.design/pls-redesign.html">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -56,7 +56,7 @@
        <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="../index.html"><img src="../img/logo.png" width="80" alt="Logo"></a>
+                <a href="https://nishal.design/"><img src="../img/logo.png" width="80" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -70,7 +70,7 @@
         <nav>
             <ul class="box-primary-nav">
                 <li><a href="../portfolio.html">Portfolio</a></li>
-                <li><a href="../index.html">Work</a></li>
+                <li><a href="https://nishal.design/">Work</a></li>
                 <li><a href="../resume.html">Resume</a></li>
                 <li><a href="../contact.html">Contact </a></li>
             </ul>
