--- a/portfolios/message_us_v2.html
+++ b/portfolios/message_us_v2.html
@@ -411,10 +411,19 @@
         <div class="col-md-9">
             <div class="h-30"></div>
             <div class="col-md-5 col-centered">
-                <video style="width:100%;" controls>
-                <source src="../vid/portfolio/MUV2/mu_v2.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-            </video>
+                <div style="width:100%; max-width:960px;">
+                  <div style="position:relative; height:0; padding-bottom:216.533333333333%;">
+                  <!-- Video size ratio calculation: 1080px / 1920px = 0.5625 (16:9) -->
+                    <iframe
+                      style="position:absolute; width:100%; height:100%;"
+                      src="https://www.youtube-nocookie.com/embed/KuuAJon6qKs?autoplay=0&amp;color=white&amp;modestbranding=1&amp;rel=0"
+                      title="Message Us v2"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen>
+                    </iframe>
+                  </div>
+                </div>
             </div>
         </div>
         
