New style changes
made some style changes

--- a/contact.html
+++ b/contact.html
@@ -106,6 +106,10 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-6 col-centered">
+            <h3>Let's connect.</h3>
+            <p>Get in touch for opportunities or just to say hi! 👋</p>
+            <div class="h-20"></div>
+            
             <form action="https://formspree.io/nishal.nandigam@gmail.com" method="post">
                 <div class="row">
                     <div class="col-md-6">
@@ -137,7 +141,7 @@
                     </div>
                     <div class="col-xs-6">
                         <div class="h-30"></div>
-                        <span class="pull-right"><p>or contact me on <a href="https://www.linkedin.com/in/nishalnandigam" target="_blank">LinkedIn</a></p></span>
+                        <span class="pull-right"><p>or contact me on <a class="alternative" href="https://www.linkedin.com/in/nishalnandigam" target="_blank">LinkedIn</a></p></span>
                     </div>
                 </div>
             </form>
