--- a/portfolios/GTC_web_experience.html
+++ b/portfolios/GTC_web_experience.html
@@ -100,7 +100,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="../img/portfolio/GTC/intro.png" alt="" class="img-responsive" />
+            <img src="../img/portfolio/GTC/intro.png" alt="" class="img-responsive cover-img" />
             <div class="h-30"></div>
         </div>
 
@@ -265,7 +265,7 @@
             <div class="h-60"></div>
             <h4>Launch plan</h4>
             <p>As we didn’t have a Product Manager to coordinate the launch of the new website, I took the lead in charting a timeline to launch. We had a 5 week deadline to work backwards from; thus, I had to work with the tech team to understand what was feasible in this time frame. We were able to meet the deadline by launching a paired-down version of the website. Ongoing iterative work is being done to get the website closer to the designs.</p>
-            <a target="_blank" href="https://www.goodtree.capital/">See website</a>
+            <a class="alternative" target="_blank" href="https://www.goodtree.capital/">See website</a>
             <div class="h-30"></div>
         </div>
         
