--- a/portfolios/pls-redesign.html
+++ b/portfolios/pls-redesign.html
@@ -87,8 +87,8 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
+                <li><a href="https://nishal.design/">Home</a></li>
                 <li><a href="../portfolio.html">Portfolio</a></li>
-                <li><a href="https://nishal.design/">Work</a></li>
                 <li><a href="../resume.html">Resume</a></li>
                 <li><a href="../contact.html">Contact </a></li>
             </ul>
@@ -100,7 +100,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="../img/portfolio/PLS/intro.png" alt="" class="img-responsive" />
+            <img src="../img/portfolio/PLS/intro.png" alt="" class="img-responsive cover-img" />
             <div class="h-30"></div>
         </div>
 
