--- a/resume.html
+++ b/resume.html
@@ -107,7 +107,7 @@
             <h3>Nishal Nandigam</h3>
             <h5>UX DESIGNER</h5>
             <div class="h-20"></div>
-            <a target="_blank" href="pdf/nishal_resume.pdf">Download a PDF</a>
+            <a class="alternative" target="_blank" href="pdf/nishal_resume.pdf">Download a PDF</a>
             <div class="h-60"></div>
         </div>
         <div class="col-md-5 hidden-sm hidden-xs">
