--- a/portfolios/d2_help_gateway.html
+++ b/portfolios/d2_help_gateway.html
@@ -100,7 +100,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="../img/portfolio/D2Gateway/intro.png" alt="" class="img-responsive" />
+            <img src="../img/portfolio/D2Gateway/intro.png" alt="" class="img-responsive cover-img" />
             <div class="h-30"></div>
         </div>
 
