--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
        <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="https://nishal.design/"><img src="img/logo.svg" width="170" alt="Logo"></a>
+                <a href="https://nishal.design/"><img src="img/logo.svg" width="140" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
@@ -119,7 +119,7 @@
             <div class="h-10"></div>
         </div>
         <div class="col-md-7">
-            <p>Design professional who has expertise in solving customer problems through user-centered design. With a background in engineering, champions solutions that are both meaningful and pragmatic. Excels at taking ideas from concept to wireframe to prototype.</p>
+            <p>Design professional who has expertise in solving problems through user-centered design. With a background in Computer Science, champions solutions that are both usable and feasible. Excels at architecting scalable design frameworks at the system-level.</p>
             <div class="h-30"></div>
             <div class="h-10"></div>
         </div>
@@ -129,10 +129,11 @@
         </div>
         <div class="col-md-12">
             <strong>Amazon</strong>
-            <p>UX Designer II, <span style="color:#999999;">Jun 2017 - Present</span></p>
+            <p>UX Designer II, <span style="color:#999999;">Jul 2019 - Present</span></p>
+        </div>
+        <div class="col-md-12">
             <div class="h-10"></div>
         </div>
-        <div class="col-md-12"></div>
         <div class="col-md-7">
             <p>Product strategy and design for Amazon’s customer service experience.</p>
             <ul>
@@ -142,25 +143,37 @@
                 <div class="h-10"></div>
                 <li>Designed an intuitive mobile experience where customers can receive technical support for their hardware orders. Validated through guerilla-style customer intercepts.</li>
             </ul>
-            <div class="h-60"></div>
+            <div class="h-30"></div>
+        </div>
+        <div class="col-md-12">
+            <p>UX Designer I, <span style="color:#999999;">Jun 2017 - Jul 2019</span></p>
+        </div>
+        <div class="col-md-7">
+            <div class="h-10"></div>
+            <p>Project strategy an design for various Amazon customer service experiences.</p>
+            <ul>
+                <li>Designed an intuitive mobile experience where customers can receive technical support for their hardware orders. Validated through guerillastyle customer intercepts.</li>
+                <div class="h-10"></div>
+                <li>Redesigned the visuals and architecture of the Device and Digital Help gateway page to improve the discoverability of common problems and handle scalability issues due to the growing number of Amazon devices and digital services.</li>
+            </ul>
+            <div class="h-30"></div>
         </div>
         <div class="col-md-12"></div>
         <div class="col-md-12">
-            <strong>Amazon</strong>
             <p>UX Design Intern, <span style="color:#999999;">May 2016 - Jul 2016</span></p>
-            <div class="h-10"></div>
         </div>
         <div class="col-md-7">
+            <div class="h-10"></div>
             <p>Design strategy for Amazon’s post-purchase customer experience.</p>
             <ul>
                 <li>Redesigned and validated the experience where customers can track the progress of their shipment. Awarded a U.S. Design Patent for the ornamental design of this tracker.</li>
                 <div class="h-10"></div>
                 <li>Collaborated with Principal Designers to reimagine the design of the progress tracker UI element to reflect the new Amazon visual design style and strategy.</li>
             </ul>
-            <div class="h-60"></div>
         </div>
         <div class="col-sm-12"></div>
         <div class="col-md-12">
+            <div class="h-60"></div>
             <strong>Amway</strong>
             <p>Quality Assurance Intern, <span style="color:#999999;">May 2015 - Aug 2015</span></p>
             <div class="h-10"></div>
