--- a/portfolios/message_us_v2.html
+++ b/portfolios/message_us_v2.html
@@ -74,11 +74,11 @@
     </div>
     <!-- end Preloader -->
 
-    <div class="container-fluid" >
+    <div class="container-fluid" style="padding-bottom:40px">
        <!-- box-header -->
         <header class="box-header">
             <div class="box-logo">
-                <a href="https://nishal.design/"><img src="../img/logo.svg" width="170" alt="Logo"></a>
+                <a href="https://nishal.design/"><img src="../img/logo.svg" width="140" alt="Logo"></a>
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
