--- a/resume.html
+++ b/resume.html
@@ -202,12 +202,12 @@
         </div>
         <div class="col-sm-2">
             <strong>UI/UX Design</strong>
-            <p>Sketch<br/>Balsamiq<br/>Axure</p>
+            <p>Figma<br/>Sketch<br/>XD</p>
             <div class="h-20"></div>
         </div>
         <div class="col-sm-2">
             <strong>Prototyping</strong>
-            <p>Invision Studio<br/>Protopie<br/>Keynote</p>
+            <p>After Effects<br/>Protopie<br/>Keynote</p>
             <div class="h-20"></div>
         </div>
         <div class="col-sm-2">
