resume content & portfolio style

--- a/portfolios/Oneself.html
+++ b/portfolios/Oneself.html
@@ -283,7 +283,7 @@
         
         <div class="col-md-3">
             <div class="h-30"></div>
-            <blockquote>These are the screenshots I create for the Apple App Store Product Page</blockquote>
+            <blockquote>These are the screenshots I created for the Apple App Store Product Page</blockquote>
         </div>
         
         <div class="col-md-9">
