--- a/resume.html
+++ b/resume.html
@@ -130,7 +130,20 @@
         </div>
         <div class="col-md-12">
             <strong>Amazon</strong>
-            <p>UX Designer II, <span style="color:#999999;">Jul 2019 - Present</span></p>
+            <h5>Senior UX Designer, <span style="color:#999999; font-weight:normal;">Oct 2021 - Present</span></h5>
+        </div>
+        <div class="col-md-12">
+            <div class="h-10"></div>
+        </div>
+        <div class="col-md-7">
+            <p>Product strategy and design for Amazon's customer service associate contact-handling tool.</p>
+            <ul>
+                <li>Designer for Amazon’s Customer Service tool for associates. Owned reimagining the tool from a retail-specific tool to an Amazon-wide platform that enables other businesses to host their customer service tools for associates to use. Responsible for developing global navigation, defining ownership, migration paths, scalable patterns, and UX documentation.</li>
+            </ul>
+            <div class="h-30"></div>
+        </div>
+        <div class="col-md-12">
+            <h5>UX Designer II, <span style="color:#999999; font-weight:normal;">Jul 2019 - Present</span></h5>
         </div>
         <div class="col-md-12">
             <div class="h-10"></div>
@@ -140,14 +153,12 @@
             <ul>
                 <li>Lead designer for Amazon’s Customer Service Chatbot. Facilitated design sprints, group ideation, and analysis to inform the future vision of the product. Defined and designed the desktop version of the chatbot. Tested, designed, and launched the chatbot in the Japan and German marketplaces.</li>
                 <div class="h-10"></div>
-                <li>Redesigned the visuals and architecture of the Device and Digital Help gateway page to improve the discoverability of common problems and handle scalability issues due to the growing number of Amazon devices and digital services.</li>
-                <div class="h-10"></div>
-                <li>Designed an intuitive mobile experience where customers can receive technical support for their hardware orders. Validated through guerilla-style customer intercepts.</li>
+                <li>UX POC for Amazon CS Machine Learning experiences. Worked to integrate ML experiences into our chatbot platform. Led an initiative to generate ML ecosystem maps that provided a high-level overview of the models we use across the customer journey and internal dev ops cycle.</li>
             </ul>
             <div class="h-30"></div>
         </div>
         <div class="col-md-12">
-            <p>UX Designer I, <span style="color:#999999;">Jun 2017 - Jul 2019</span></p>
+            <h5>UX Designer I, <span style="color:#999999; font-weight:normal;">Jun 2017 - Jul 2019</span></h5>
         </div>
         <div class="col-md-7">
             <div class="h-10"></div>
@@ -161,7 +172,7 @@
         </div>
         <div class="col-md-12"></div>
         <div class="col-md-12">
-            <p>UX Design Intern, <span style="color:#999999;">May 2016 - Jul 2016</span></p>
+            <h5>UX Design Intern, <span style="color:#999999; font-weight:normal;">May 2016 - Jul 2016</span></h5>
         </div>
         <div class="col-md-7">
             <div class="h-10"></div>
@@ -176,7 +187,7 @@
         <div class="col-md-12">
             <div class="h-60"></div>
             <strong>Amway</strong>
-            <p>Quality Assurance Intern, <span style="color:#999999;">May 2015 - Aug 2015</span></p>
+            <h5>Quality Assurance Intern, <span style="color:#999999; font-weight:normal;">May 2015 - Aug 2015</span></h5>
             <div class="h-10"></div>
         </div>
         <div class="col-md-7">
