--- a/portfolios/Oneself.html
+++ b/portfolios/Oneself.html
@@ -188,7 +188,7 @@
         
         <div class="col-md-3">
             <div class="h-30"></div>
-            <blockquote>One of the artifacts from the whiteboarding exercise we executed to compile open research questions.</blockquote>
+            <blockquote>The logo and color palette that I created.</blockquote>
         </div>
         
         <div class="col-md-9">
