Spotify basic updates

--- a/resume.html
+++ b/resume.html
@@ -106,7 +106,7 @@
         <div class="col-md-10 col-centered">
         <div class="col-md-7">
             <h3>Nishal Nandigam</h3>
-            <h5>UX DESIGNER</h5>
+            <h5>PRODUCT DESIGNER</h5>
             <div class="h-20"></div>
             <a class="alternative" target="_blank" href="pdf/nishal_resume.pdf">Download a PDF</a>
             <div class="h-60"></div>
@@ -120,7 +120,7 @@
             <div class="h-10"></div>
         </div>
         <div class="col-md-7">
-            <p>Design professional who has expertise in solving problems through user-centered design. With a background in Computer Science, champions solutions that are both usable and feasible. Excels at architecting scalable design frameworks at the system-level.</p>
+            <p>Design professional who has expertise in solving problems through user-centered design. With a background in Computer Science, is fluent in designing for ML experiences. Excels at architecting scalable design frameworks at the system-level.</p>
             <div class="h-30"></div>
             <div class="h-10"></div>
         </div>
@@ -129,8 +129,24 @@
             <div class="h-10"></div>
         </div>
         <div class="col-md-12">
+            <div class="h-60"></div>
+            <strong>Spotify</strong>
+            <h5>Senior Product Designer, <span style="color:#999999; font-weight:normal;">Feb 2022 - Present</span></h5>
+            <div class="h-10"></div>
+        </div>
+        <div class="col-md-7">
+            <p>Design Lead for Content Personalization on Home.</p>
+            <ul>
+                <li>Partnered with Staff Designers to craft the building blocks for a complete re-envisioning of the Home experience. This was one of the largest changes to the Spotify experience and was launched in March 2023.</li>
+                <div class="h-10"></div>
+                <li>Design Lead in Personalization Mission for new content formats. Developed and executed design strategy for the integration of Audiobooks into Home.</li>
+                <li>Crafted ML programming strategy and mental model for content programming srategy for the new 1D Home Feed.</li>
+            </ul>
+            <div class="h-60"></div>
+        </div>
+        <div class="col-md-12">
             <strong>Amazon</strong>
-            <h5>Senior UX Designer, <span style="color:#999999; font-weight:normal;">Oct 2021 - Present</span></h5>
+            <h5>Senior UX Designer, <span style="color:#999999; font-weight:normal;">Oct 2021 - Dec 2021</span></h5>
         </div>
         <div class="col-md-12">
             <div class="h-10"></div>
@@ -143,7 +159,7 @@
             <div class="h-30"></div>
         </div>
         <div class="col-md-12">
-            <h5>UX Designer II, <span style="color:#999999; font-weight:normal;">Jul 2019 - Present</span></h5>
+            <h5>UX Designer II, <span style="color:#999999; font-weight:normal;">Jul 2019 - Sep 2021</span></h5>
         </div>
         <div class="col-md-12">
             <div class="h-10"></div>
