--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         👋 <strong>Hi, I'm Nishal.</strong>
                         <div class="h-10"></div>
                     </h1>
-                    <p>I'm a UX designer in Seattle, Washington. I currently work at Amazon, where I spend my day <strong>championing</strong> our users, <strong>ideating</strong> new solutions, and <strong>crafting</strong> vivid experiences.</p>
+                    <p>I'm a Product Designer in New York City. I currently work at Spotify, where I spend my day <strong>championing</strong> our users, <strong>ideating</strong> new solutions, and <strong>crafting</strong> personalized experiences.</p>
                     <div class="h-10"></div>
                     <a class="alternative" href="#my-work">Check out my work.</a>
                 </div>
