--- a/portfolios/aviary.html
+++ b/portfolios/aviary.html
@@ -48,10 +48,10 @@
     
     
     <!--preview-->
-    <meta property="og:title" content="Desktop Customer Service Chat">
-    <meta property="og:image" content="../img/portfolio/MUD/intro.png">
+    <meta property="og:title" content="Aviary">
+    <meta property="og:image" content="../img/portfolio/aviary/intro.png">
     <meta property="og:description" content="Nishal Nandigam's portfolio">
-    <meta property="og:url" content="https://nishal.design/desktop-customer-service-chat.html">
+    <meta property="og:url" content="https://nishal.design/aviary.html">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
