--- a/resume.html
+++ b/resume.html
@@ -137,10 +137,11 @@
         <div class="col-md-7">
             <p>Design Lead for Content Personalization on Home.</p>
             <ul>
-                <li>Partnered with Staff Designers to craft the building blocks for a complete re-envisioning of the Home experience. This was one of the largest changes to the Spotify experience and was launched in March 2023.</li>
+                <li>Home Content Design Lead reimagining the architecture and browsing experience of the Home page. Collaborated with user research, data science, and ML teams to identify user needs and product opportunities, establish new feed UX principles and best practices, and craft new methods for the user to retrieve and discover content.</li>
                 <div class="h-10"></div>
-                <li>Design Lead in Personalization Mission for new content formats. Developed and executed design strategy for the integration of Audiobooks into Home.</li>
-                <li>Crafted ML programming strategy and mental model for content programming srategy for the new 1D Home Feed.</li>
+                <li>Crafted new UI component strategy for the Spotify Home page. This involved better classifying our recommendations, creating new UI components, aligning visual language, and contributing back to the Spotify design library.</li>
+                <div class="h-10"></div>
+                <li>Personalization Design Lead for the integration of Audiobooks into the Home ecosystem. Defined user needs for audiobooks through user research, ideated on new recommendation content hypotheses and experiences, and scaled existing components for audiobooks. Collaborated with Audiobook designers across the company to align end-to-end experience.</li>
             </ul>
             <div class="h-60"></div>
         </div>
