--- a/resume.html
+++ b/resume.html
@@ -130,8 +130,22 @@
         </div>
         <div class="col-md-12">
             <div class="h-60"></div>
+            <strong>Peacock</strong>
+            <h5>Principal Product Designer, <span style="color:#999999; font-weight:normal;">Feb 2024 - Present</span></h5>
+            <div class="h-10"></div>
+        </div>
+        <div class="col-md-7">
+            <p>Design Lead for Content Discovery and Personalization on Peacock.</p>
+            <ul>
+                <li>Personalization Design SME, partnering closely with Product, Research, Data Insights, and ML teams to craft strategy and initiatives on where we could inject AI and Gen AI to improve personalization and enhance discovery of content.</li>
+                <div class="h-10"></div>
+                <li>Crafted scalable architectural system to surface metadata to merchandise content. This new framework flexes to handle unique content and marketplace needs, account for future personalization of metadata, and enables us to quickly set up and run new metadata experiments.</li>
+            </ul>
+            <div class="h-60"></div>
+        </div>
+        <div class="col-md-12">
             <strong>Spotify</strong>
-            <h5>Senior Product Designer, <span style="color:#999999; font-weight:normal;">Feb 2022 - Present</span></h5>
+            <h5>Senior Product Designer, <span style="color:#999999; font-weight:normal;">Feb 2022 - Feb 2024</span></h5>
             <div class="h-10"></div>
         </div>
         <div class="col-md-7">
