--- a/resume.html
+++ b/resume.html
@@ -139,6 +139,8 @@
                 <li>Personalization Design SME, partnering closely with Product, Research, Data Insights, and ML teams to craft strategy and initiatives on where we could inject AI and Gen AI to improve personalization and enhance discovery of content.</li>
                 <div class="h-10"></div>
                 <li>Crafted scalable architectural system to surface metadata to merchandise content. This new framework flexes to handle unique content and marketplace needs, account for future personalization of metadata, and enables us to quickly set up and run new metadata experiments.</li>
+                <div class="h-10"></div>
+                <li>Launched a 0→1 NBA mobile-first feature that makes the user feel as if they are sitting Courtside when they watch an NBA game. Led a nimble team from discovery to execution to quickly launch this product.</li>
             </ul>
             <div class="h-60"></div>
         </div>
