--- a/resume.html
+++ b/resume.html
@@ -245,25 +245,21 @@
             <div class="h-10"></div>
         </div>
         <div class="col-sm-2">
-            <strong>UI/UX Design</strong>
-            <p>Figma<br/>Sketch<br/>XD</p>
+            <strong>Product Design</strong>
+            <p>Interaction Design<br/>Design for AI<br/>Visual Design</p>
+            <div class="h-20"></div>
+        </div>
+        <div class="col-sm-2">
+            <strong>Design Process</strong>
+            <p>Storytelling<br/>Workshopping<br/>Design with AI</p>
             <div class="h-20"></div>
         </div>
         <div class="col-sm-2">
             <strong>Prototyping</strong>
-            <p>After Effects<br/>Protopie<br/>Keynote</p>
+            <p>Figma<br/>After Effects<br/></p>
             <div class="h-20"></div>
         </div>
-        <div class="col-sm-2">
-            <strong>Visual Design</strong>
-            <p>Illustrator<br/>Photoshop</p>
-            <div class="h-20"></div>
-        </div>
-        <div class="col-sm-2">
-            <strong>Web Design</strong>
-            <p>HTML<br/>CSS<br/>Javascript</p>
-            <div class="h-20"></div>
-        </div>
+        
         </div>
     </div>
     
