--- a/resume.html
+++ b/resume.html
@@ -112,7 +112,7 @@
         </div>
         <div class="col-md-5 hidden-sm hidden-xs">
             <div class="h-20"></div>
-            <img src="img/nishal.png" id="hidden" class="img-responsive cover-img" alt="" />
+            <img src="img/nishal.png" id="hidden" class="img-responsive" alt="" />
         </div>
         <div class="col-sm-12">
             <h4>Summary</h4>
