--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <!-- end Preloader -->
 
-    <div class="container-fluid">
+    <div class="container-fluid dots">
         <!-- box header -->
         <header class="box-header">
             <div class="box-logo">
@@ -102,17 +102,16 @@
             <section class="box-intro">
                 <div class="table-cell">
                     <h1 class="box-headline letters">
-                        👋 <strong>Hi, I'm Nishal.</strong>
+                        <strong>Hi, I'm Nishal.</strong>
                         <div class="h-10"></div>
                     </h1>
                     <p>I'm a Product Designer in New York City. I currently work at Peacock, where I spend my day crafting solutions at the intersection of <strong>designing for the user</strong> and <strong>designing for the AI</strong>.</p>
-                    <div class="h-10"></div>
-                    <a class="alternative" href="#my-work">Check out my work.</a>
+                    <div class="h-30"></div>
+                    <a class="btn-box" href="#my-work">View projects<i data-feather="arrow-down" style="vertical-align: middle; margin-left: 4px;"></i></a> 
                 </div>
-                
-                <div class="mouse">
+                <!--<div class="mouse">
                     <div class="scroll"></div>
-                </div>
+                </div>-->
             </section>
         </div>    
         <!-- end box-intro -->
@@ -333,7 +332,7 @@
     </div>
     <!-- end main container -->
     
-     <div id="my-instagram" class="main-container center clearfix bg-bone">
+     <div id="my-instagram" class="main-container center clearfix bg-light-green">
         <div class="col-md-9 col-centered">
             <h2>My Instagram.</h2>
             <p>Explore the other ways I manifest art &amp; design ✏️</p>
